fix wraping problems, now works well for smaller screens (width)

--- a/frontend/src/components/Header.scss
+++ b/frontend/src/components/Header.scss
@@ -1,6 +1,6 @@
-.header {
-  width: 100vw;
-  height: 128px;
+$small-width-collapse: 600px;
+.main-header {
+  width: 100%;
   background-color: grey;
 
   .header-nav {
@@ -8,7 +8,6 @@
       color: rgb(255, 220, 22);
       text-decoration: none;
       font-size: 20px;
-      ;
     }
   }
 
@@ -16,26 +15,47 @@
     height: 30px;
   }
 }
-.top-header{
-  height: 64px;
-}
-.header-logo{
-  width: auto;
-  height: 100%;
+
+.header-logo {
+  width: 60px;
+  height: 60px;
+  min-width: 60px;
+  min-height: 60px;
+  margin-right: auto;
   border-radius: 5px;
   overflow: hidden;
-  a{
-    width: 100%;
-    height: 100%;
-    display: block;
-  }
   img {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit:contain;
   }
 }
-.header-searchbar{
-  width: 600px;
-  height: 70px;
+.header-searchbar {
+  width: 58%;
+  max-width: 58%;
+  height: 60px;
+}
+.header-signin{
+  margin-left: auto;
+}
+.top-header {
+  @media (max-width: $small-width-collapse) {
+    flex-wrap: wrap;
+
+    .header-logo {
+      order: 1;
+     
+    }
+    .header-signin {
+      order: 2;
+      position: relative;
+    }
+    .header-searchbar {
+      order: 3; // Move the second div to the top
+      width: 100%;
+      max-width: none; // Reset max-width
+      margin-bottom: 0;
+      margin-top: 8px;
+    }
+  }
 }
