--- a/frontend/src/components/SearchBox.scss
+++ b/frontend/src/components/SearchBox.scss
@@ -1,15 +1,22 @@
-.search-btn{
-    height: 100%;
-    aspect-ratio: 1/1;
-    border-radius: 15px;
-    overflow: hidden;
+.search-btn {
+  height: 50px;
+  width: 50px;
+  min-height: 50px;
+  min-width: 50px;
+  border-radius: 15px;
+  overflow: hidden;
+  padding: 0; // Reset button padding
+  border: none; // Reset button border
+  svg {
+    width: 70%;
+    height: 70%;
+  }
 }
-.search-box{
-    height: 100%;
-
+.search-box {
+  height: 100%;
 }
-.search-input{
-    height: 100%;
-    border-radius: 15px;
-    overflow: hidden;
+.search-input {
+  height: 100%;
+  border-radius: 15px;
+  overflow: hidden;
 }
